# FastapiAdmin

./: .gitignore  AI劳动仲裁实训资料入口.md  CLAUDE.md  GIT工作流配置.md  README.en.md  README.md  deploy.sh  docker-compose.yaml  二次开发工作流.md  删除记录.md  同步上游说明.md  启动测试报告.md  组件清单.md  组件清理建议.md
.superpowers/brainstorm/: visual-style-options.html
backend/: README.md  main.py  pyproject.toml  requirements.txt  test_mysql.py
backend/app/: init_app.py
backend/app/api/v1/module_common/monitoring/: health.py
backend/app/api/v1/module_monitor/: __init__.py
backend/app/api/v1/module_platform/: __init__.py
backend/app/api/v1/module_platform/menu/: model.py  schema.py
backend/app/api/v1/module_platform/tenant/: model.py  schema.py  service.py
backend/app/api/v1/module_system/: __init__.py
backend/app/api/v1/module_system/auth/: controller.py  schema.py  service.py
backend/app/api/v1/module_system/dept/: model.py  service.py
backend/app/api/v1/module_system/log/: model.py
backend/app/api/v1/module_system/params/: model.py
backend/app/api/v1/module_system/role/: crud.py  model.py  service.py
backend/app/api/v1/module_system/user/: crud.py  model.py  schema.py  service.py
backend/app/common/: constant.py  enums.py
backend/app/config/: path_conf.py  setting.py
backend/app/core/: base_model.py  base_schema.py  dependencies.py  logger.py  middlewares.py  permission.py
backend/app/plugin/: init_app.py
backend/app/plugin/module_ai/: plugin.toml
backend/app/plugin/module_ai/chat/: controller.py  crud.py  model.py  rag.py  schema.py  service.py  ws.py
backend/app/plugin/module_ai/knowledge/: __init__.py  chroma_store.py  controller.py  crud.py  embedding.py  extractors.py  model.py  schema.py  service.py  text_splitter.py
backend/app/scripts/: initialize.py
backend/app/scripts/data/: platform_menu.json  platform_order.json  platform_plugin.json  sys_dict_data.json  sys_dict_type.json  sys_menu.json  sys_notice.json  sys_operation_log.json  sys_param.json  sys_tenant_config.json  sys_ticket.json  sys_user.json
backend/app/utils/: console.py  import_util.py
backend/env/: .env  .env.dev.example  .env.prod.example
backend/sql/mysql/: admin_2026-01-03_201546.sql  fastapiadmin-2026-06-21_180728-dump.sql
backend/sql/postgres/: admin_2026-01-03_213232.sql  fastapiadmin-2026-06-21_181339-dump.sql
backend/tests/: conftest.py  openapi.json  test_ai_chat_service.py  test_ai_chat_ws.py  test_api_module_platform.py  test_api_module_system.py  test_auth_session.py  test_menu_scope_compat.py  test_removed_modules.py  test_ticket_schema_import.py  test_user_menu_whitelist.py
backend/tests/core/: test_single_org_runtime.py
backend/tests/plugin/module_ai/chat/: test_rag_retriever_selection.py
backend/tests/plugin/module_ai/knowledge/: test_chroma_store.py  test_embedding.py  test_knowledge_service.py  test_models.py  test_text_splitter.py
backend/tests/scripts/: test_skeleton_seed_menu.py
courseware/: ai-arbitration-static-demo.html  audit_courseware_display.js  frontend-demo.css  frontend-demo.html  frontend-demo.js  index.html  main.js  styles.css  test_courseware.js  test_frontend_demo.js
courseware/assets/mockups/: courseware-display-audit.json
courseware/modules/: courseware-controller.js  courseware-data.js  courseware-renderer.js  courseware-state.js
docs/ai-arbitration-training/: AI仲裁辅助系统项目实训方案.docx  AI仲裁辅助系统项目讲解文档.md  AI项目技术细节和难点讲解.md  Day1-当前后端骨架版-演讲稿.md  Day1-环境搭建与AI基础-演讲稿.md  Day1-知识点与扩展整理.md  Day2-RAG检索与提示词工程-演讲稿.md  Day2-下午补充内容.md  Day3-下午补充内容.md  Day3-证据管理与文书生成-演讲稿.md  Day4-下午补充内容.md  Day4-安全认证与项目总结-演讲稿.md  一到四天知识点-同学版.md  使用uv管理项目依赖.md  四天实训AI提示词库.md  四天演讲稿完成总结.md  完整四天授课执行脚本.md  完整实训课分镜脚本-Day1-90分钟.md  文档清单和使用指南.md  课程总纲-任务流程-功能阶段表.md  项目难点总结.md
docs/superpowers/plans/: 2026-06-27-admin-ai-knowledge-skeleton.md
frontend/: .env.development.example  .env.production.example  README.md  package.json
frontend/src/: App.vue
frontend/src/api/module_system/: auth.ts  dict.ts  notice.ts
frontend/src/lang/package/: en.ts  zh-cn.ts
frontend/src/router/: index.ts
frontend/src/store/modules/: config.store.ts
frontend/src/utils/: websocket.ts
frontend/src/views/dashboard/: index.vue
frontend/web/: .env.development  .env.example  README.md  index.html  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/web/src/: App.spec.ts  App.vue
frontend/web/src/__tests__/: smoke.spec.ts  (+7 more)
(+113 files in other folders)
