[project]
name = "backend"
version = "2.0.0"
description = "fastapiadmin 后端工程"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles==24.1.0",
    "aiosmtplib>=3.0.2",
    "aiosqlite==0.22.1",
    "alembic==1.18.4",
    "asyncmy==0.2.11",
    "asyncpg==0.31.0",
    "bleach==6.4.0",
    "chromadb-client>=1.5.9,<2",
    "click==8.1.7",
    "cryptography==49.0.0",
    "fastapi==0.115.2",
    "fastapi-cache2[redis]>=0.1.8",
    "fastapi-limiter==0.1.6",
    "fastapi-mail==1.5.1",
    "greenlet==3.5.2",
    "httpx==0.28.1",
    "jinja2==3.1.6",
    "langchain-openai>=1.1.5,<2",
    "loguru==0.7.3",
    "openai==2.28.0",
    "openpyxl==3.1.5",
    "pandas==3.0.3",
    "pillow==12.2.0",
    "psutil==7.2.2",
    "psycopg[binary]==3.3.2",
    "pydantic-settings>=2.6.1",
    "pyjwt==2.13.0",
    "pymysql==1.2.0",
    "pypdf>=5.1.0,<6",
    "python-docx>=1.1.2,<2",
    "python-multipart==0.0.32",
    "redis==7.1.0",
    "rich==15.0.0",
    "sqlalchemy>=2.0.51,<2.1",
    "sqlglot[rs]==27.8.0",
    "tinycss2==1.5.1",
    "typer==0.26.7",
    "ua-parser==1.0.2",
    "uvicorn==0.49.0",
    "websockets>=16.0,<17.0",
]
[dependency-groups]
dev = [
    "fakeredis>=2.21.0,<3",   # 测试：内存 Redis，配合 TESTING
    "pytest==9.0.2",
    "pytest-asyncio>=0.24.0",  # 异步测试支持
    "ruff==0.14.13",          # 代码检查、格式化
]

[tool.uv]
default-groups = ["dev"]     # 本地 uv sync 含 dev；生产 pip -r requirements.txt 不含 pytest/ruff/fakeredis

[[tool.uv.index]]
name = "tuna"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"

[tool.ruff]
line-length = 200
indent-width = 4
preview = false
fix = true
show-fixes = true
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
extend-include = ["*.pyw"]

[tool.ruff.lint]
select = [
    "FAST",
    "F",
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "W191",  # indentation contains tabs
    "B904",  # Within an `except` clause
    "B010",  # Do not call with a constant attribute value.
    "B009",  # Do not use getattr() with a constant attribute value.
    "E712",  # Avoid equality comparisons to `False`; use `not getattr(self.model, "is_deleted"):` for false checks
    "W293",  # blank line with whitespace
]

[tool.ruff.lint.per-file-ignores]
"tests/conftest.py" = ["E402"]  # 先设置 TESTING/SQLite 环境，再 import 应用

[tool.ruff.format]
docstring-code-format = true
preview = false
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
